--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('./assets/fonts-css/Montserrat-Complete/montserrat.css');
+@import url('./assets/fonts-css/Pangchang/panchang.css');
 
 * {
   margin: 0;
@@ -13,19 +14,26 @@
   user-select: none;
   -ms-overflow-style: none;
   scrollbar-width: none;
+  transition: color 0.3s, background-color 0.3s, transform 0.3s;
+  border: none;
+  outline: none;
 }
 
 :root[data-theme="light"] {
   --bg-color: #ffffff;
   --text-color: #333333;
+  --link-color: #000000;
 }
 
 :root[data-theme="dark"] {
   --bg-color: #1a1a1a;
-  --text-color: #ffffff;
+  --text-color: #fafafa;
+  --link-color: #ffffff;
 }
 
-body {
+body, html {
+  width: 100vw;
+  overflow-x: hidden;
   background-color: var(--bg-color);
   color: var(--text-color);
   font-family: 'Montserrat';
@@ -33,4 +41,14 @@ body {
 
 body.theme-transitioning {
   transition: background-color 0.3s, color 0.3s;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+  color: var(--text-color);
+}
+
+a {
+  text-decoration: none;
+  color: var(--link-color);
+  font-weight: 600;
 }
